--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Home
 <!-- Image thumbnails -->
 <figure>
     {% for picture in photos.0apgfsq.media -%}
-    <a href="/pictures/{{ picture.id }}">
+    <a href="/cpsc349-project1/dist/pictures/{{ picture.id }}">
         <img src="{{ picture.src.tiny }}" alt="{{ picture.alt }}">
     </a>
     {% endfor -%}
