changes to pictures page

--- a/pictures.html
+++ b/pictures.html
@@ -11,9 +11,13 @@ permalink: "/pictures/{{ image.id }}/index.html"
     <head>
         <link rel="stylesheet" href="https://unpkg.com/mvp.css">
     </head>
-    <figure>
-        <img src="{{ image.src.large }}" alt="{{ image.alt }}">
-    </figure>
-    <p>{{  }}</p>
+        <figure>
+            <center>
+                <img src="{{ image.src.large }}" alt="{{ image.alt }}">
+            </center>
+        </figure>
+
+        <p>{{  }}</p>
+    
 
 </html>
