--- a/aboutus.html
+++ b/aboutus.html
@@ -2,37 +2,13 @@
 layout: base
 title: About Us
 ---
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>{{ title }} - {{ site }}</title>
-        <link rel="stylesheet" href="https://unpkg.com/mvp.css">
-    </head>
-
-    <body>
-        <!-- Nav -->
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="pictures">Collection</a></li>
-                <li><a href="pictures">About Us</a></li>
-            </ul>
-        </nav>
-        <!-- End Nav -->
-
+<center> 
+    <em>
+        <p>Sean Hatfield</p>
+        <p>Julian Apparicio</p>
         <p>Emmanuel Salcedo</p>
-        
-        <!-- Footer -->
-        <footer>
-            <hr>
-            <p>
-                <small>
-                    <a href="https://www.pexels.com">Photos provided by Pexels</a>
-                </small>
-            </p>
-        </footer>
-        <!-- End Footer -->
-    </body>
-</html>
+        <p>William Ye</p> 
+    </em>
+</center>
 
-</html>
+       
