--- a/pictures.html
+++ b/pictures.html
@@ -10,6 +10,11 @@ permalink: "/pictures/{{ image.id }}/index.html"
 <html lang="en">
     <head>
         <link rel="stylesheet" href="https://unpkg.com/mvp.css">
+        <style>
+            body {
+                background-color: "{{ image.avg_color }}"; 
+            }
+        </style>
     </head>
         <figure>
             <center>
